[package]
name = "macros_bot"
version = "0.0.1"
description = "Keyboard Macros App"
authors = ["Alvin"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
enigo = { git = "https://github.com/alvinzhengq/enigo" }
tokio = { version = "1", features = ["full"] }
tauri = { version = "1.2", features = ["fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = "0.3.9"
rdev = "0.4.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
